--- a/data/en/pricing.yml
+++ b/data/en/pricing.yml
@@ -15,7 +15,7 @@ pricing:
     # pricing table loop
     - title : "Prices"
       style : "2"
-      price : "Premium ACS Member"
+      price : "ACS Member - Premium Package"
       #icon : "tf-ion-android-hangout"
       bg_image : "images/bg/page-header.jpg"
       services:
@@ -34,7 +34,7 @@ pricing:
     # pricing table loop
     - title : "Prices"
       style : "1"
-      price : "Standard ACS Member"
+      price : "ACS Member Standard Package, Community Associates - Basic Package"
       #icon : "tf-ion-android-bulb"
       bg_image : "images/bg/page-header.jpg"
       services:
