Edits to Awards: New forms for GreatLakes versions

--- a/data/en/awards.yml
+++ b/data/en/awards.yml
@@ -36,15 +36,21 @@ awards:
         Additional information and the application details can be found at the following **[LINK](https://www.divched.org/award/divched-region-awards-excellence-high-school-teaching)**. Only complete application portfolios will be considered.
       
         *Deadline*  
-        Friday, August 25, 2023 
+        Midwest Region Award: Friday, August 25, 2023 
+
+        Great Lakes Region Award: **The deadline for nominations has been extended until September 24, 2023.**
       
         *How to Apply*  
         The Excellence in High School Teaching Award package should include: 
-        - Completed nomination form. **[LINK](/MWRM2023_CHEDHSTeach.pdf)** to download Excellence in High School Teaching Award form.
+        - Completed nomination form.
         - Nominee Statement on Teaching Philosophy
         - Nominee Current CV
         - Letters of Support
-      
+
+        **[Midwest Excellence in High School Teaching Award forms LINK](/MWRM2023_CHEDHSTeach.pdf)**. Please submit Midwest Region Award package to Dr. Jetty Duffy-Matzner via email attachment at duffy@augie.edu .
+        
+        **[Great Lakes Excellence in High School Teaching Award forms LINK](/GreatLakesRM2023_CHEDHSTeach.pdf)**. Please submit Great Lakes Region Award package to Dr. Christian Ray via email attachment at crray@illinois.edu . The deadline for nominations for this award has been extended until September 24, 2023.
+         
     # faq item loop
     - title : "E. Ann Nalley Regional Award for Volunteer Service to the American Chemical Society"
       content : |
@@ -58,15 +64,21 @@ awards:
         A nominee must be a member of the American Chemical Society residing in a local section within the region, and will have made significant contributions to their Region of the American Chemical Society. The volunteerism to be recognized may include a variety of activities, including but not limited to the initiation or sponsorship of a singular endeavor or exemplary leadership in the region. Past and present members of the ACS Board of Directors and staff are ineligible for this award. 
         
         *Deadline*  
-        Friday, August 25, 2023 
+        Midwest Region Award: Friday, August 25, 2023 
+        
+        Great Lakes Region Award: **The deadline for nominations has been extended until September 24, 2023.**
         
         *Nomination Process*  
         Any individual, except a member of the award selection committee, may nominate or support only one nominee for this award in any given year. Please complete all fields. 
         
-        *Required documentation*  
-        Submit each of the following to Awards Chair, Dr. Jetty Duffy-Matzner via email attachment at duffy@augie.edu .
-         - nomination and support forms. **[LINK](/MWRM2023_EAnnNalley.pdf)** to download E. Ann Nalley Award forms.
-         - biographical sketch (or curriculum vitae)
+        *How to Apply*  
+        The E. Ann Nalley Regional Award package should include: 
+        - nomination and support forms. 
+        - biographical sketch (or curriculum vitae)
+        
+        **[Midwest E. Ann Nalley Regional Award forms LINK](/MWRM2023_EAnnNalley.pdf)**. Please submit Midwest Region Award package to Dr. Jetty Duffy-Matzner via email attachment at duffy@augie.edu .
+        
+        **[Great Lakes E. Ann Nalley Regional Award forms LINK](/GreatLakesRM2023_EAnnNalley.pdf)**. Please submit Great Lakes Region Award package to Dr. Christian Ray via email attachment at crray@illinois.edu . The deadline for nominations for this award has been extended until September 24, 2023.
          
     # faq item loop
     - title : "Partners for Progress and Prosperity Award "
@@ -85,13 +97,19 @@ awards:
         A nominee may represent academia, industry, government, small business or other organizations such as a Local Section. Partnerships can include any ACS, domestic or international entity. 
         
         *Deadline*  
-        Friday, August 25, 2023 
+        Midwest Region P3 Award: Friday, August 25, 2023 
+
+        Great Lakes Region P3 Award: **The deadline for nominations has been extended until September 24, 2023.**
         
         *How to Apply*  
-        **[LINK](/MWRM2023_P3Award.pdf)** to download P3 Award forms. The P3 Award package should include: 
+        The P3 Award package should include: 
         - Completed Nomination Form describing the partnership, its activities, outcomes, and impact. 
         - Completed P3 Participating Partners Form from each of the participating partners. 
         - A least one, but no more than three completed Supporter Forms.
+        
+        **[Midwest Region P3 Award forms LINK](/MWRM2023_P3Award.pdf)**. Please submit Midwest Region Award package to Dr. Jetty Duffy-Matzner via email attachment at duffy@augie.edu .
+        
+        **[Great Lakes Region P3 Award forms LINK](/GreatLakesRM2023_P3Award.pdf)**. Please submit Great Lakes Region Award package to Dr. Christian Ray via email attachment at crray@illinois.edu . The deadline for nominations for this award has been extended until September 24, 2023.
 
     # faq item loop
     - title : "Midwest Region Board’s Travel Award for Undergraduate Students "
