--- a/data/en/travel.yml
+++ b/data/en/travel.yml
@@ -18,7 +18,7 @@ travel:
       content : "A number of hotels reside near the St. Charles Convention Center including:
 
 <br>
-- **[Embassy Suites by Hilton](https://www.hilton.com/en/book/reservation/flexibledates/?ctyhocn=STLEMES&arrivalDate=2023-09-26&departureDate=2023-09-27&room1NumAdults=1)** is connected to the St. Charles Convention Center and offers special ACS rates until October 2, 2023. To apply the discounted rate, call Hilton Reservations at 800-774-1500 and use code *acs* to book.
+- **[Embassy Suites by Hilton](https://www.hilton.com/en/book/reservation/flexibledates/?ctyhocn=STLEMES&arrivalDate=2023-09-26&departureDate=2023-09-27&room1NumAdults=1)** is connected to the St. Charles Convention Center and offers special ACS rates until October 2, 2023. To apply the discounted rate, call Hilton Reservations at 800-774-1500 and use code *acs* to book."
       
     # faq item loop
     - title : "What attractions does St. Charles offer?"
