--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -105,35 +105,26 @@ sponsor:
     ############################ sponsor group loop
     - title : "Platinum Level Sponsors"
       sponsor:
-        # sponcor loop
-        - logo : "images/clients/bayer_horiz.png"
-          link : "#"
-          
-        # sponcor loop
         - logo : "images/clients/Pt-Shimadzu2.png"
           link : "#"
-          
-        # sponcor loop
-        - logo : "images/clients/Fl-WashU2.png"
+        - logo : "images/clients/Au-SIUE2.png"
           link : "#"
- 
+
       ############################ sponsor group loop
     - title : "Gold Level Sponsors"
       sponsor:
-        # sponcor loop
-        - logo : "images/clients/Au-SIUE2.png"
+        - logo : "images/clients/bayer_horiz.png"
           link : "#"
 
       ############################ sponsor group loop
     - title : "Silver Level Sponsors"
       sponsor:
-        # sponcor loop
         - logo : "images/clients/Ag-Fimbrion3.png"
           link : "#"
-
-        # sponcor loop
         - logo : "images/clients/Ag-UMSL2.png"
           link : "#"
+        - logo : "images/clients/logo-panomebio.webp"
+          link : "https://panomebio.com/"
 
   # call to action in sponsor
   sponsorship:
