UIUC and Macmillion sponsors. Move sponsors up.

--- a/data/en/exposition.yml
+++ b/data/en/exposition.yml
@@ -50,5 +50,7 @@ sponsor:
   enable : true
   # sponsor data comes from "homepage.yml" file
 
+######################### exhibit ############################
 exhibit:
   enable :  true
+  # exhibit data comes from "homepage.yml" file
